# Agent

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  RUNBOOK.md  build.rs  deny.toml  rust-toolchain.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
audit/: F-dep-1.md  F-docker-1.md  F-docker-2.md  F-gate-1.md  F-hardening-1.md  F-observability-1.md  F-privilege-1.md  F-privilege-2.md  F-privilege-3.md  F-supply-1.md  F-supply-2.md  F-supplychain-ctlogs-required-1.md  F-supplychain-golden-1.md  F-supplychain-leaf-crossbind-1.md  F-supplychain-rekor-validfor-1.md  F-supplychain-repro-inputs-1.md  F-supplychain-sct-1.md  F-supplychain-set-only-1.md  F-supplychain-source-repo-1.md  F-supplychain-trust-brittle-1.md  STATE
audit/closed/: F-connect-1.md  F-enroll-cn-1.md  F-ha-agent-servername-1.md  F-identity-1.md  F-observability-1.md  F-privilege-3.md  F-reliability-1.md  F-renewstorm-1.md  F-seccomp-1.md  F-seccomp-defensive-entries-1.md  F-secret-1.md  F-splicehalfclose-1.md  F-supply-2.md  F-supplychain-bundle-shape-1.md  F-supplychain-ci-injection-1.md  F-supplychain-rekor-validfor-1.md  F-supplychain-repro-1.md  F-supplychain-rollback-1.md  F-supplychain-toctou-1.md  F-supplychain-validfor-1.md  F-supplychain-verifyself-1.md  F-wireversion-2.md
deploy/: README.md
deploy/kubernetes/: agent-daemonset.yaml  agent-networkpolicy.yaml
scripts/: check-dockerfile-nonroot.sh  gate.sh  sync-contracts.sh  vendor-contracts.sh  verify-nonroot-image.sh
src/: config.rs  hardening.rs  identity.rs  join.rs  lib.rs  main.rs  mtls.rs  privilege.rs  secret.rs  supervisor.rs  telemetry.rs  tls.rs  update.rs  version.rs
src/gateway/: client.rs  mod.rs  splice.rs  transport.rs  wire.rs
src/hardening/: imp.rs
src/supply_chain/: bundle.rs  cert.rs  der.rs  dsse.rs  error.rs  mod.rs  policy.rs  rekor.rs  sct.rs  tests.rs  trust.rs
src/supply_chain/testdata/golden/: agent-binary  agent.cosign.sigstore.json  agent.provenance.sigstore.json  trusted_root.json
testing/docker/node/: Dockerfile  node-entrypoint.sh
tests/: docker_e2e.rs  gateway_it.rs  hardening_e2e.rs  init.rs  join_it.rs  otlp_enabled.rs  seccomp_kill.rs  splice_e2e.rs  telemetry_no_content.rs  version.rs  wire_conformance.rs
tests/support/: gateway.rs  mod.rs
